--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t mikalaihryb/complex-client-test -f ./client/Dockerfile.dev ./client
+  - docker build -t complex-client-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run mikalaihryb/complex-client-test npm run test -- --coverage
+  - docker run -e CI=true complex-client-test npm run test -- --coverage
 
 after_success:
   - echo $DOCKER_PASSWORD | docker login -u $DOCKER_ID --password-stdin
-  - docker build --tag mikalaihryb/complex-client ./client
-  - docker build --tag mikalaihryb/complex-nginx ./nginx
-  - docker build --tag mikalaihryb/complex-server ./server
-  - docker build --tag mikalaihryb/complex-worker ./worker
-  - docker push mikalaihryb/complex-client
-  - docker push mikalaihryb/complex-nginx
-  - docker push mikalaihryb/complex-server
-  - docker push mikalaihryb/complex-worker
+  - docker build --tag $DOCKER_ID/complex-client ./client
+  - docker build --tag $DOCKER_ID/complex-nginx ./nginx
+  - docker build --tag $DOCKER_ID/complex-server ./server
+  - docker build --tag $DOCKER_ID/complex-worker ./worker
+  - docker push $DOCKER_ID/complex-client
+  - docker push $DOCKER_ID/complex-nginx
+  - docker push $DOCKER_ID/complex-server
+  - docker push $DOCKER_ID/complex-worker
